[package]
authors = "John King <jk@almostmachines.dev"
categories = ["asynchronous"]
description = "A simple, agnostic reactive extensions event bus utilising rxRust under the hood."
homepage = "https://github.com/almostmachines/rx_event_bus"
keywords = ["rx", "reactivex", "frp", "async", "observables", "events", "event bus"]
license = "MIT"
name = "rx_event_bus"
readme = "README.md"
repository = "https://github.com/almostmachines/rx_event_bus"
version = "0.1.0"
edition = "2024"

[dependencies]
rxrust = "1.0.0-rc.3"

[[example]]
name = "local_event_bus"

[[example]]
name = "shared_event_bus"
